<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sura_bringup</name>
  <version>0.0.0</version>
  <description>SURA bringup package</description>
  <maintainer email="barajas@uji.es">usuario</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cirtesub_description</exec_depend>
  <exec_depend>cirtesu_tank_aruco_localization</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sura_cameras</exec_depend>
  <exec_depend>sura_diagnostics</exec_depend>
  <exec_depend>sura_imu</exec_depend>
  <exec_depend>sura_localization</exec_depend>
  <exec_depend>sura_navigator</exec_depend>
  <exec_depend>sura_teleop</exec_depend>
  <exec_depend>sura_hardware_interface</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
